model_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
  namespace: test-model
  labels:
    app: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      volumes:
      - name: model-path
        hostPath:
          path: /tmp/mounted_model/0001
      containers:
      - name: automl-image
        image: gcr.io/cloud-devrel-public-resources/gcloud-container-1.14.0:latest
        volumeMounts: 
        - name: model-path
          mountPath: /tmp/mounted_model/0001
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: test-model
spec:
  type: NodePort
  selector:
    app: model
  ports:
    - name: http
      protocol: TCP
      port: 8501
      targetPort: 8501
